force-app/main/default/objects/NavFlowDetail__mdt/NavFlowDetail__mdt.object-meta.xml
<CustomObject>
    <description>Contains navigation flow details.</description>
    <label>Navigation Flow Detail</label>
    <pluralLabel>Navigation Flow Details</pluralLabel>
</CustomObject>