force-app/main/default/objects/NavFlowDetail__mdt/fields/Community_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_Page_URL__c</fullName>
    <description>Store the URL portion created as a part of Community tab Page.
For e.g.- for a community page for flow Intake Application as application-intake which is visible as a URL parameter whenever community page is created.</description>
    <label>Community Page URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>