force-app/main/default/objects/NavFlowDetail__mdt/fields/FlowDisplayName__c.field-meta.xml
<CustomField>
    <fullName>FlowDisplayName__c</fullName>
    <description>Display name for the flow.
Example : Intake Application

If custom label is used then prefix with $.
Example : $IntakeApplication</description>
    <inlineHelpText>Display name for the flow.
Example : Intake Application

If custom label is used then prefix with $.
Example : $IntakeApplication</inlineHelpText>
    <label>Flow Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>