force-app/main/default/objects/NavFlowDetail__mdt/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <description>Flow unique name.</description>
    <label>Flow Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>