force-app/main/default/objects/NavFlowDetail__mdt/fields/IsJsonBasedFlow__c.field-meta.xml
<CustomField>
    <fullName>IsJsonBasedFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the flow is driven by JSON Object and Page Layout schema.</description>
    <inlineHelpText>Flag to indicate if the flow is driven by JSON Object and Page Layout schema.</inlineHelpText>
    <label>Is JSON Based Flow?</label>
    <type>Checkbox</type>
</CustomField>