force-app/main/default/objects/NavFlowDetail__mdt/fields/JsonObjectSchema__c.field-meta.xml
<CustomField>
    <fullName>JsonObjectSchema__c</fullName>
    <description>Object definition in JSON format.</description>
    <inlineHelpText>Object definition in JSON format.</inlineHelpText>
    <label>JSON Object Schema</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>