force-app/main/default/objects/NavFlowDetail__mdt/fields/NextActionGoToPage__c.field-meta.xml
<CustomField>
    <fullName>NextActionGoToPage__c</fullName>
    <description>Used to determine which page to load when next button is clicked. Assume the following example:
Current navigation flow status : CRCRR
Current page is the second page.

If this field value is &apos;Required&apos; then clicking next button will skip page 3 since it already completed and will load page 4.
If this field value is &apos;Completed&apos; then clicking next button will load page 3.

 If &apos;Required&apos; then next action will load the next required page. If the immediate next page is already completed then it will be skipped.</description>
    <inlineHelpText>Used to determine which page to load when next button is clicked. Assume the following example:
Current navigation flow status : CRCRR
Current page is the second page.

If value is &apos;Required&apos; then next button will skip page 3 and will load page 4.</inlineHelpText>
    <label>Next Action Go To Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>