force-app/main/default/objects/NavFlowDetail__mdt/listViews/Display_All.listView-meta.xml
<ListView>
    <fullName>Display_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>FlowDisplayName__c</columns>
    <columns>FlowName__c</columns>
    <columns>Community_Page_URL__c</columns>
    <columns>NextActionGoToPage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Display All</label>
    <language>en_US</language>
</ListView>